tests/dividezero.err
3: error: attempted division by zero
	int a = 5 / 0;
	          ^
