tests/dividezero.juice
// divide-by-zero test

int a = 5 / 0;